apps/csi-smb/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: csi-smb-provisioner
  labels:
    goldilocks.fairwinds.com/enabled: "true"
